--- a/zsx-fwmp/pom.xml
+++ b/zsx-fwmp/pom.xml
@@ -145,5 +145,17 @@
     		<artifactId>java-jwt</artifactId>
     		<version>2.2.0</version><!--$NO-MVN-MAN-VER$-->
 		</dependency>
+		
+		<dependency>
+			<groupId>zsx.fwmp.base.mapper</groupId>
+			<artifactId>zsx-fwmp-base-mapper</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>zsx.thirdparty</groupId>
+			<artifactId>zsx-thirdparty</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
