--- a/zsx-fwmp/zsx-fwmp-web/src/main/resources/application-host.yml
+++ b/zsx-fwmp/zsx-fwmp-web/src/main/resources/application-host.yml
@@ -80,9 +80,9 @@ spring:
 
 #mybatis-plus
 mybatis-plus:
-  mapper-locations: classpath:/mappers/app/*Mapper.xml
+  mapper-locations: classpath:/mappers/web/*Mapper.xml
   #实体扫描，多个package用逗号或者分号分隔
-  typeAliasesPackage: com.zsx.model
+  typeAliasesPackage: com.zsx.model.webdto
   global-config:
     #主键类型  0:"数据库ID自增", 1:"用户输入ID",2:"全局唯一ID (数字类型唯一ID)", 3:"全局唯一ID UUID";
     id-type: 2
